--- a/app/styles/modules/components/_scroll-down.scss
+++ b/app/styles/modules/components/_scroll-down.scss
@@ -7,8 +7,6 @@
 
   transition: opacity 0.6s ease-in-out;
 
-  padding: var(--pd-sm);
-
   &.hide {
     opacity: 0;
   }
