--- a/app/styles/modules/sections/_hero.scss
+++ b/app/styles/modules/sections/_hero.scss
@@ -1,5 +1,4 @@
 /* 
-  - Height of this section is extended to create space for the highlights section that needs to partially float between the hero and the intro section.
   - Stacking context: 
     -- The header section and its menu's should always appear above this hero section and has values ranging form 1 to 3.
     -- The _content-container here has value 0.
@@ -7,39 +6,14 @@
     -- The background-image has value -2.
 */
 .hero {
-  height: 166vh;
+  position: relative;
+  top: 0;
   width: 100%;
+  height: 100vh;
+  margin-top: calc((-1) * var(--height-header));
 
-  @include mobile_md {
-    height: 145vh;
-  }
-
-  /*   
-    Removed because of issue on Ipad Mini
-  
-    @include tablet_md {
-    height: 133vh;
-  } 
-  
-  */
-
-  @include pc_xl {
-    height: 115vh;
-  }
-
-  &__position-container {
-    /* 
-      Container position is set based on the height of the header.
-      See layout.js
-    */
-
-    position: absolute;
-    top: var(--height-header);
-    left: 0;
-    right: 0;
-
-    /* Note that there is a slight overflow issue here; it interferes with the scrollbar probably; Hidden with overflow-x on <body> */
-    height: calc(100vh - (var(--height-header)));
+  @media screen and (orientation: landscape) {
+    min-height: 450px;
   }
 
   &__content-container {
@@ -47,34 +21,31 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+
     z-index: 1; // see stacking context note __global.scss
 
     width: 100%;
 
     padding: 0 var(--pd-sm);
 
-    @include mobile_lg {
+    @include mobile_md {
       padding: 0 var(--pd-base);
     }
-
     @include tablet_sm {
       padding: 0 var(--pd-lg);
     }
-
     @include tablet_md {
       padding: 0 var(--pd-2xl);
     }
-
     @include pc_lg {
       padding: 0 var(--pd-4xl);
     }
-
     @include pc_xl {
       padding: 0 var(--pd-8xl);
     }
-
-    @include pc_xl {
-      padding: 0 var(--pd-16xl);
+    @include pc_2xl {
+      /* There is ample space, so the header padding is increased. This creates the need to push the hero content further down */
+      margin-top: var(--mg-4xl);
     }
   }
 
@@ -84,61 +55,59 @@
 
     margin: 0 auto var(--mg-lg); // distance with link container
 
+    @include pc_xl {
+      margin: 0 auto var(--mg-2xl);
+    }
     @include pc_2xl {
       margin: 0 auto var(--mg-4xl);
     }
   }
 
   &__typewriter {
-    font-size: var(--fs-md);
+    font-size: var(--fs-xl);
     color: var(--txtClr-lightblue);
 
     margin-bottom: var(--mg-xs);
 
     @include mobile_md {
-      font-size: var(--fs-lg);
-    }
-
-    @include pc_sm {
-      font-size: var(--fs-xl);
-    }
-
-    @include pc_lg {
       font-size: var(--fs-2xl);
     }
-
-    @include pc_xl {
+    @include mobile_lg {
       font-size: var(--fs-3xl);
     }
-
-    @include pc_2xl {
+    @include pc_lg {
+      font-size: var(--fs-4xl);
+    }
+    @include pc_xl {
       font-size: var(--fs-6xl);
+    }
+    @include pc_2xl {
+      font-size: var(--fs-10xl);
     }
   }
 
   &__title {
     color: var(--txtClr-white);
-    font-size: var(--fs-xl);
+    font-size: var(--fs-md);
 
     text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.1);
     margin: 0 0 var(--mg-xs);
 
     @include mobile_md {
-      font-size: var(--fs-2xl);
+      font-size: var(--fs-lg);
     }
-
+    @include mobile_lg {
+      font-size: var(--fs-xl);
+    }
     @include pc_sm {
       font-size: var(--fs-2xl);
     }
-
     @include pc_lg {
       font-size: var(--fs-3xl);
     }
-
     @include pc_xl {
       font-size: var(--fs-4xl);
     }
-
     @include pc_2xl {
       font-size: var(--fs-8xl);
     }
@@ -157,22 +126,21 @@
     margin: 0 auto;
 
     @include mobile_md {
+      font-size: var(--fs-base-plus);
+    }
+    @include mobile_lg {
       font-size: var(--fs-md);
     }
-
     @include pc_sm {
-      font-size: var(--fs-md);
+      font-size: var(--fs-lg);
       max-width: 55ch;
     }
-
     @include pc_lg {
       font-size: var(--fs-2xl);
     }
-
     @include pc_xl {
       font-size: var(--fs-3xl);
     }
-
     @include pc_2xl {
       font-size: var(--fs-6xl);
       padding: 0 var(--pd-xl);
@@ -180,7 +148,12 @@
   }
 
   &__link-container {
-    display: flex;
+    display: none;
+
+    @include pc_sm {
+      display: flex;
+    }
+
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -217,7 +190,11 @@
     top: 0;
     left: 0;
     right: 0;
-    height: 100%;
+    height: 100vh;
+
+    @media screen and (orientation: landscape) {
+      min-height: 450px;
+    }
   }
 
   /* 
@@ -225,7 +202,7 @@
   */
   &__bg__overlay {
     width: 100%;
-    height: 133%;
+    height: 100%;
     background-color: rgba(11, 33, 74, 0.95);
     z-index: -1; // see stacking context note __global.scss
   }
@@ -235,7 +212,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 133%;
+    height: 100%;
     z-index: -2; // see stacking context note __global.scss
 
     background-image: url("../images/logo/liondigits_logo_v1_gold_transparent-bg-1600x1600.svg");
